# dance-with

./: .gitignore  custom_config.yml  main.py  pyproject.toml
docs/: help.org
first-project/: chapter3.py  custom_config.yml  non.py  simple.py  start.py  test.py  test2.py
src/mobject/: clock.py
