[project]
name = "dance-with-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "manimgl>=1.7.2",
    "pyopengl>=3.1.9",
    "setuptools>=76.0.0",
]
# packages = [{ from = "src", include = "" }]
